# cartograph

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
docs/: architecture.md  architecture.mermaid  index.html
src/: __init__.py  config.py
src/agent/: __init__.py  graph.py  state.py
src/agent/nodes/: __init__.py  evaluator.py  planner.py  searcher.py  synthesizer.py
src/agent/prompts/: evaluator.txt  planner.txt  synthesizer.txt
src/retrieval/: __init__.py  cache.py
src/search/: __init__.py  ddg.py
tests/: test_cache.py  test_evaluator.py  test_graph.py  test_planner.py  test_searcher.py  test_synthesizer.py
